--- a/Activities/door_open_closed.ipynb
+++ b/Activities/door_open_closed.ipynb
@@ -200,8 +200,8 @@
      "text": [
       "Python library 3.13.7 (main, Aug 14 2025, 11:12:11) [Clang 17.0.0 (clang-1700.0.13.3)], numpy 2.4.0\n",
       "Testing boolean\n",
-      "Out of 1000, 605 were True, and 395 were False\n",
-      "Perc true from sampling: 0.605, expected 0.6\n",
+      "Out of 1000, 599 were True, and 401 were False\n",
+      "Perc true from sampling: 0.599, expected 0.6\n",
       "Passed\n",
       "Boolean result: True\n"
      ]
@@ -341,7 +341,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>door_state</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>door_state</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "door_state results: All test cases passed!"
@@ -497,7 +497,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>door_sensor</pre></strong> passed! ✨</p>"
+       "<p><strong><pre style='display: inline;'>door_sensor</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "door_sensor results: All test cases passed!"
@@ -583,21 +583,7 @@
      "otter_answer_cell"
     ]
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m door_gt = make_door_ground_truth(door_open=door_start_state)\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Set the probabilities for this combination\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[43mset_probability\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoor_gt\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdoor_gt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m                \u001b[49m\u001b[43mdoor_initial_state\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdoor_start_state\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m                \u001b[49m\u001b[43maction\u001b[49m\u001b[43m=\u001b[49m\u001b[43maction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m                \u001b[49m\u001b[43mdoor_final_state\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdoor_end_state\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m                \u001b[49m\u001b[43mprob\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1.0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Try the action - should succeed, since we set the probability to 1\u001b[39;00m\n\u001b[32m     16\u001b[39m ret_state = try_action(door_gt=door_gt, action=action)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mset_probability\u001b[39m\u001b[34m(door_gt, door_initial_state, action, door_final_state, prob)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mset_probability\u001b[39m(door_gt: DoorGroundTruth, \n\u001b[32m      3\u001b[39m                     door_initial_state : \u001b[38;5;28mbool\u001b[39m, \n\u001b[32m      4\u001b[39m                     action : \u001b[38;5;28mstr\u001b[39m, \n\u001b[32m      5\u001b[39m                     door_final_state : \u001b[38;5;28mbool\u001b[39m, \n\u001b[32m      6\u001b[39m                     prob : \u001b[38;5;28mfloat\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[43mdoor_gt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mset_probability\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoor_initial_state\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdoor_initial_state\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      8\u001b[39m \u001b[43m                            \u001b[49m\u001b[43maction\u001b[49m\u001b[43m=\u001b[49m\u001b[43maction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m                            \u001b[49m\u001b[43mdoor_final_state\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdoor_final_state\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m                            \u001b[49m\u001b[43mprob\u001b[49m\u001b[43m=\u001b[49m\u001b[43mprob\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/Activities/door_open_closed_classes.py:78\u001b[39m, in \u001b[36mDoorGroundTruth.set_probability\u001b[39m\u001b[34m(self, door_initial_state, action, door_final_state, prob)\u001b[39m\n\u001b[32m     75\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m DoorGroundTruth.actions[action] == \u001b[32m0\u001b[39m: row_ind = \u001b[32m0\u001b[39m\n\u001b[32m     77\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m door_final_state:\n\u001b[32m---> \u001b[39m\u001b[32m78\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mactions_probs\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrow_ind\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcol_ind\u001b[49m\u001b[43m]\u001b[49m = prob\n\u001b[32m     79\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     80\u001b[39m     \u001b[38;5;28mself\u001b[39m.actions_probs[row_ind,col_ind] = \u001b[32m1\u001b[39m-prob\n",
-      "\u001b[31mTypeError\u001b[39m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is (mostly) a syntax check, but by forcing the probabilities to be one, it means the action should always succeed\n",
     "# GUIDE part 3: try changing prob = 0.0 and check that the return state is NOT the end state\n",
@@ -622,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -663,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -677,12 +663,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>door_action</pre></strong> passed! 🌈</p>"
+      ],
+      "text/plain": [
+       "door_action results: All test cases passed!"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"door_action\")"
    ]
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -715,21 +715,35 @@
     "\n",
     "# GUIDE - set to correct value               \n",
     "# List of names (creates a set)\n",
-    "worked_with_names = {\"not filled out\"}\n",
+    "worked_with_names = {\"None\"}\n",
     "# List of URLS W26 (creates a set)\n",
-    "websites = {\"not filled out\"}\n",
+    "websites = {\"None\"}\n",
     "# Approximate number of hours, including lab/in-class time\n",
-    "hours = -1.5\n"
+    "hours = 3.8746\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🙌</p>"
+      ],
+      "text/plain": [
+       "hours_collaborators results: All test cases passed!"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"hours_collaborators\")"
    ]
