--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -69,13 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robot ground truth passed check (yay!)\n"
+     ]
+    }
+   ],
    "source": [
     "# Syntax check of your code\n",
     "robot_gt = RobotGroundTruth()\n",
@@ -95,13 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robot ground truth passed check (yay!)\n"
+     ]
+    }
+   ],
    "source": [
     "robot_gt.reset_location()\n",
     "robot_gt.set_move_right_probabilities(0.2, 0.1)\n",
@@ -120,13 +136,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking move_left function\n",
+      "Checking move_right function\n",
+      "On left wall 37, on right wall 17, of 80 moves\n",
+      "Checking move left probabilities\n",
+      "Checking move right probabilities\n",
+      "Passed discrete tests\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Edit the code in robot_ground_truth.py (the methods tagged with Bayes assignment)\n",
     "test_discrete_move_functions()"
@@ -134,12 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🍀</p>"
+      ],
+      "text/plain": [
+       "robotGT results: All test cases passed!"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"robotGT\")"
    ]
@@ -156,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -170,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -192,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -209,13 +262,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning world ground truth test\n",
+      "Passed tests\n",
+      "Testing case for robot in front of door: True\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Probability should be close to 0.7000, is 0.0000, robot loc True",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m test_world_ground_truth()\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Edit the code in robot_sensors.py (the methods tagged with Bayes assignment)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mtest_discrete_sensors\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/robot_sensors.py:124\u001b[39m, in \u001b[36mtest_discrete_sensors\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    119\u001b[39m     \u001b[38;5;66;03m# If the robot is in front of the door, then we get the first set of probabilities - the robot is in\u001b[39;00m\n\u001b[32m    120\u001b[39m     \u001b[38;5;66;03m#  front of the door and we should return True 70% of the time\u001b[39;00m\n\u001b[32m    121\u001b[39m     \u001b[38;5;66;03m# If the robot is NOT in front of the door, then we get the second set of probabilities - the robot is NOT in\u001b[39;00m\n\u001b[32m    122\u001b[39m     \u001b[38;5;66;03m#  front of the door and we should return True 20% of the time\u001b[39;00m\n\u001b[32m    123\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(prob_count_true, p, atol=\u001b[32m0.1\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m124\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProbability should be close to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m0.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprob_count_true\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m0.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, robot loc \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mis_in_front_of_door_gt\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    126\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m b_print:\n\u001b[32m    127\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPassed tests\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: Probability should be close to 0.7000, is 0.0000, robot loc True"
+     ]
+    }
+   ],
    "source": [
     "# No code to edit for this one - just make sure the world works properly before testing the sensors\n",
     "test_world_ground_truth()\n",
