--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "robotGT results: All test cases passed!"
@@ -229,7 +229,15 @@
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed robot sensor syntax check\n"
+     ]
+    }
+   ],
    "source": [
     "# Syntax check  \n",
     "robot_gt = RobotGroundTruth()\n",
@@ -275,20 +283,20 @@
      "text": [
       "Beginning world ground truth test\n",
       "Passed tests\n",
-      "Testing case for robot in front of door: True\n"
+      "Testing case for robot in front of door: True\n",
+      "Testing case for robot in front of door: False\n",
+      "Passed tests\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Probability should be close to 0.7000, is 0.0000, robot loc True",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m test_world_ground_truth()\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# Edit the code in robot_sensors.py (the methods tagged with Bayes assignment)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mtest_discrete_sensors\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/robot_sensors.py:124\u001b[39m, in \u001b[36mtest_discrete_sensors\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    119\u001b[39m     \u001b[38;5;66;03m# If the robot is in front of the door, then we get the first set of probabilities - the robot is in\u001b[39;00m\n\u001b[32m    120\u001b[39m     \u001b[38;5;66;03m#  front of the door and we should return True 70% of the time\u001b[39;00m\n\u001b[32m    121\u001b[39m     \u001b[38;5;66;03m# If the robot is NOT in front of the door, then we get the second set of probabilities - the robot is NOT in\u001b[39;00m\n\u001b[32m    122\u001b[39m     \u001b[38;5;66;03m#  front of the door and we should return True 20% of the time\u001b[39;00m\n\u001b[32m    123\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(prob_count_true, p, atol=\u001b[32m0.1\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m124\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProbability should be close to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m0.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprob_count_true\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m0.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, robot loc \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mis_in_front_of_door_gt\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    126\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m b_print:\n\u001b[32m    127\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPassed tests\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mValueError\u001b[39m: Probability should be close to 0.7000, is 0.0000, robot loc True"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -301,12 +309,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🚀</p>"
+      ],
+      "text/plain": [
+       "robot_sensors results: All test cases passed!"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"robot_sensors\")"
    ]
@@ -328,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -340,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -373,13 +395,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking Bayes filter sensor update\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Note: If you are passing these tests but NOT passing the grader check, the problem is (probably) that you are printing out something in your code.\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# If you are passing the first two tests, but not the test_move_update \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#   If the probablities are wrong, it's probably because you're not saving your probabilities OR you haven't filled in one_full_update in Bayes_filter.py\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#   If you're getting a Warning: random number generator is off error, you're calling robot_sensor.query_door_sensor (or robot_ground_truth.move) more \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#     than once and/or calling random() more than once for each of those (or calling the query/move in the one_full_update method)\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#     Also check that you are using numpy.random.uniform, NOT a different package, for generating random numbers\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmake_tests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m test_bayes_move_update\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mtest_bayes_filter_sensor_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m test_move_one_direction()\n\u001b[32m     11\u001b[39m test_bayes_move_update()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:219\u001b[39m, in \u001b[36mtest_bayes_filter_sensor_update\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    216\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m seq \u001b[38;5;129;01min\u001b[39;00m seqs:\n\u001b[32m    217\u001b[39m     \u001b[38;5;66;03m# Double check that you're starting off with uniform probabilities\u001b[39;00m\n\u001b[32m    218\u001b[39m     bayes_filter.reset_probabilities(n_bins)\n\u001b[32m--> \u001b[39m\u001b[32m219\u001b[39m     \u001b[43mcheck_uniform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbayes_filter\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    221\u001b[39m     \u001b[38;5;66;03m# Call the update function with the given sensor readings\u001b[39;00m\n\u001b[32m    222\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m seq:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:125\u001b[39m, in \u001b[36mcheck_uniform\u001b[39m\u001b[34m(bf)\u001b[39m\n\u001b[32m    121\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcheck_uniform\u001b[39m(bf: BayesFilter):\n\u001b[32m    122\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\" At the start, should be uniform probability\u001b[39;00m\n\u001b[32m    123\u001b[39m \u001b[33;03m    @param bf - the bayes filter at initialization\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m125\u001b[39m     probs = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mn_bins\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    126\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m indx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, bf.n_bins()):\n\u001b[32m    127\u001b[39m         probs[\u001b[32m0\u001b[39m, indx] = bf.probability(indx)\n",
+      "\u001b[31mTypeError\u001b[39m: 'NoneType' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
    "source": [
     "# Note: If you are passing these tests but NOT passing the grader check, the problem is (probably) that you are printing out something in your code.\n",
     "# If you are passing the first two tests, but not the test_move_update \n",
