--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "robot_sensors results: All test cases passed!"
@@ -368,7 +368,18 @@
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
+      "[0.01 0.01 0.01 0.08 0.01 0.01 0.08 0.01 0.01 0.01]\n",
+      "[0.04166667 0.04166667 0.04166667 0.33333333 0.04166667 0.04166667\n",
+      " 0.33333333 0.04166667 0.04166667 0.04166667]\n"
+     ]
+    }
+   ],
    "source": [
     "# Syntax checks    \n",
     "n_doors = 2\n",
@@ -396,6 +407,18 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mlist = np.zeros(5)\n",
+    "# print(mlist)\n",
+    "# for indx, val in enumerate(mlist):\n",
+    "#     print(indx/5 + (1/5)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -406,20 +429,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking Bayes filter sensor update\n"
+      "Checking Bayes filter sensor update\n",
+      "[0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05\n",
+      " 0.05 0.05 0.05 0.05 0.05 0.05]\n",
+      "[0.03  0.005 0.005 0.005 0.005 0.005 0.005 0.005 0.03  0.005 0.005 0.005\n",
+      " 0.005 0.005 0.005 0.005 0.005 0.005 0.005 0.005]\n",
+      "[0.2        0.03333333 0.03333333 0.03333333 0.03333333 0.03333333\n",
+      " 0.03333333 0.03333333 0.2        0.03333333 0.03333333 0.03333333\n",
+      " 0.03333333 0.03333333 0.03333333 0.03333333 0.03333333 0.03333333\n",
+      " 0.03333333 0.03333333]\n",
+      "Checking sequence [True]\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object cannot be interpreted as an integer",
+     "ename": "ValueError",
+     "evalue": "Check door probabilities: new probability should be 0.19999999999999996, was0.03333333333333333",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Note: If you are passing these tests but NOT passing the grader check, the problem is (probably) that you are printing out something in your code.\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# If you are passing the first two tests, but not the test_move_update \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#   If the probablities are wrong, it's probably because you're not saving your probabilities OR you haven't filled in one_full_update in Bayes_filter.py\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#   If you're getting a Warning: random number generator is off error, you're calling robot_sensor.query_door_sensor (or robot_ground_truth.move) more \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#     than once and/or calling random() more than once for each of those (or calling the query/move in the one_full_update method)\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#     Also check that you are using numpy.random.uniform, NOT a different package, for generating random numbers\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmake_tests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m test_bayes_move_update\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mtest_bayes_filter_sensor_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m test_move_one_direction()\n\u001b[32m     11\u001b[39m test_bayes_move_update()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:219\u001b[39m, in \u001b[36mtest_bayes_filter_sensor_update\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    216\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m seq \u001b[38;5;129;01min\u001b[39;00m seqs:\n\u001b[32m    217\u001b[39m     \u001b[38;5;66;03m# Double check that you're starting off with uniform probabilities\u001b[39;00m\n\u001b[32m    218\u001b[39m     bayes_filter.reset_probabilities(n_bins)\n\u001b[32m--> \u001b[39m\u001b[32m219\u001b[39m     \u001b[43mcheck_uniform\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbayes_filter\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    221\u001b[39m     \u001b[38;5;66;03m# Call the update function with the given sensor readings\u001b[39;00m\n\u001b[32m    222\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m seq:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:125\u001b[39m, in \u001b[36mcheck_uniform\u001b[39m\u001b[34m(bf)\u001b[39m\n\u001b[32m    121\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mcheck_uniform\u001b[39m(bf: BayesFilter):\n\u001b[32m    122\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\" At the start, should be uniform probability\u001b[39;00m\n\u001b[32m    123\u001b[39m \u001b[33;03m    @param bf - the bayes filter at initialization\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m125\u001b[39m     probs = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbf\u001b[49m\u001b[43m.\u001b[49m\u001b[43mn_bins\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    126\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m indx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, bf.n_bins()):\n\u001b[32m    127\u001b[39m         probs[\u001b[32m0\u001b[39m, indx] = bf.probability(indx)\n",
-      "\u001b[31mTypeError\u001b[39m: 'NoneType' object cannot be interpreted as an integer"
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Note: If you are passing these tests but NOT passing the grader check, the problem is (probably) that you are printing out something in your code.\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# If you are passing the first two tests, but not the test_move_update \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#   If the probablities are wrong, it's probably because you're not saving your probabilities OR you haven't filled in one_full_update in Bayes_filter.py\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#   If you're getting a Warning: random number generator is off error, you're calling robot_sensor.query_door_sensor (or robot_ground_truth.move) more \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#     than once and/or calling random() more than once for each of those (or calling the query/move in the one_full_update method)\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#     Also check that you are using numpy.random.uniform, NOT a different package, for generating random numbers\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmake_tests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m test_bayes_move_update\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mtest_bayes_filter_sensor_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m test_move_one_direction()\n\u001b[32m     11\u001b[39m test_bayes_move_update()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:266\u001b[39m, in \u001b[36mtest_bayes_filter_sensor_update\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    263\u001b[39m         bayes_filter.update_belief_sensor_reading(world_ground_truth, robot_sensor, s)\n\u001b[32m    265\u001b[39m     \u001b[38;5;66;03m# The actual check function\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m266\u001b[39m     \u001b[43mcheck_door_probs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbayes_filter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mworld_ground_truth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb_print\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    268\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m b_print:\n\u001b[32m    269\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPassed all sequences\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:222\u001b[39m, in \u001b[36mcheck_door_probs\u001b[39m\u001b[34m(bayes_filter, world_ground_truth, robot_sensor_probs, sensor_readings, b_print)\u001b[39m\n\u001b[32m    220\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m world_ground_truth.is_location_in_front_of_door(loc):\n\u001b[32m    221\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(prob, prob_in_front_of_door):\n\u001b[32m--> \u001b[39m\u001b[32m222\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCheck door probabilities: new probability should be \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprob_in_front_of_door\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, was\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprob\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    223\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    224\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(prob, prob_not_in_front_of_door):\n",
+      "\u001b[31mValueError\u001b[39m: Check door probabilities: new probability should be 0.19999999999999996, was0.03333333333333333"
      ]
     }
    ],
