almost done, one slight issue with the last autograder check

--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🎉</p>"
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "robotGT results: All test cases passed!"
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "robot_sensors results: All test cases passed!"
@@ -368,18 +368,7 @@
      "otter_answer_cell"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-      "[0.01 0.01 0.01 0.08 0.01 0.01 0.08 0.01 0.01 0.01]\n",
-      "[0.04166667 0.04166667 0.04166667 0.33333333 0.04166667 0.04166667\n",
-      " 0.33333333 0.04166667 0.04166667 0.04166667]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Syntax checks    \n",
     "n_doors = 2\n",
@@ -407,18 +396,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mlist = np.zeros(5)\n",
-    "# print(mlist)\n",
-    "# for indx, val in enumerate(mlist):\n",
-    "#     print(indx/5 + (1/5)/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "metadata": {
     "tags": [
      "otter_answer_cell"
@@ -430,29 +407,60 @@
      "output_type": "stream",
      "text": [
       "Checking Bayes filter sensor update\n",
-      "[0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05 0.05\n",
-      " 0.05 0.05 0.05 0.05 0.05 0.05]\n",
-      "[0.03  0.005 0.005 0.005 0.005 0.005 0.005 0.005 0.03  0.005 0.005 0.005\n",
-      " 0.005 0.005 0.005 0.005 0.005 0.005 0.005 0.005]\n",
-      "[0.2        0.03333333 0.03333333 0.03333333 0.03333333 0.03333333\n",
-      " 0.03333333 0.03333333 0.2        0.03333333 0.03333333 0.03333333\n",
-      " 0.03333333 0.03333333 0.03333333 0.03333333 0.03333333 0.03333333\n",
-      " 0.03333333 0.03333333]\n",
-      "Checking sequence [True]\n"
+      "Checking sequence [True]\n",
+      "Passed\n",
+      "\n",
+      "Checking sequence [False]\n",
+      "Passed\n",
+      "\n",
+      "Checking sequence [True, True, False]\n",
+      "Passed\n",
+      "\n",
+      "Passed all sequences\n",
+      "\n",
+      "Testing move in one direction\n",
+      "Test move move_left\n",
+      "Passed\n",
+      "Test move move_right\n",
+      "Passed\n",
+      "Testing move update\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Warning: Sensor reading is different than check False versus True\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Warning: Sensor reading is different than check False versus True\n",
+      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Warning: Sensor reading is different than check True versus False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Loc 0.6000000000000001, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Warning: Sensor reading is different than check True versus False\n",
+      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Warning: Sensor reading is different than check True versus False\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Passed\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Check door probabilities: new probability should be 0.19999999999999996, was0.03333333333333333",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Note: If you are passing these tests but NOT passing the grader check, the problem is (probably) that you are printing out something in your code.\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# If you are passing the first two tests, but not the test_move_update \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#   If the probablities are wrong, it's probably because you're not saving your probabilities OR you haven't filled in one_full_update in Bayes_filter.py\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m#   If you're getting a Warning: random number generator is off error, you're calling robot_sensor.query_door_sensor (or robot_ground_truth.move) more \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#     than once and/or calling random() more than once for each of those (or calling the query/move in the one_full_update method)\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m#     Also check that you are using numpy.random.uniform, NOT a different package, for generating random numbers\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmake_tests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m test_bayes_move_update\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[43mtest_bayes_filter_sensor_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m test_move_one_direction()\n\u001b[32m     11\u001b[39m test_bayes_move_update()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:266\u001b[39m, in \u001b[36mtest_bayes_filter_sensor_update\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    263\u001b[39m         bayes_filter.update_belief_sensor_reading(world_ground_truth, robot_sensor, s)\n\u001b[32m    265\u001b[39m     \u001b[38;5;66;03m# The actual check function\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m266\u001b[39m     \u001b[43mcheck_door_probs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbayes_filter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mworld_ground_truth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mseq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb_print\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    268\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m b_print:\n\u001b[32m    269\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mPassed all sequences\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/bayes_filter.py:222\u001b[39m, in \u001b[36mcheck_door_probs\u001b[39m\u001b[34m(bayes_filter, world_ground_truth, robot_sensor_probs, sensor_readings, b_print)\u001b[39m\n\u001b[32m    220\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m world_ground_truth.is_location_in_front_of_door(loc):\n\u001b[32m    221\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(prob, prob_in_front_of_door):\n\u001b[32m--> \u001b[39m\u001b[32m222\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mCheck door probabilities: new probability should be \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprob_in_front_of_door\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, was\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprob\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    223\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    224\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(prob, prob_not_in_front_of_door):\n",
-      "\u001b[31mValueError\u001b[39m: Check door probabilities: new probability should be 0.19999999999999996, was0.03333333333333333"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -471,12 +479,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong style='color: red;'><pre style='display: inline;'>bayes_filter</pre> results:</strong></p><p><strong><pre style='display: inline;'>bayes_filter - 1</pre> result:</strong></p><pre>    ✅ Test case passed</pre><p><strong><pre style='display: inline;'>bayes_filter - 2</pre> result:</strong></p><pre>    ✅ Test case passed</pre><p><strong><pre style='display: inline;'>bayes_filter - 3</pre> result:</strong></p><pre>    ❌ Test case failed\n",
+       "    Trying:\n",
+       "        assert test_bayes_move_update(b_print=False)\n",
+       "    Expecting nothing\n",
+       "    **********************************************************************\n",
+       "    Line 1, in bayes_filter 2\n",
+       "    Failed example:\n",
+       "        assert test_bayes_move_update(b_print=False)\n",
+       "    Expected nothing\n",
+       "    Got:\n",
+       "        Warning: Sensor reading is different than check False versus True\n",
+       "        Warning: Sensor reading is different than check False versus True\n",
+       "        Warning: Sensor reading is different than check True versus False\n",
+       "        Warning: Sensor reading is different than check True versus False\n",
+       "        Warning: Sensor reading is different than check True versus False\n",
+       "</pre>"
+      ],
+      "text/plain": [
+       "bayes_filter results:\n",
+       "    bayes_filter - 1 result:\n",
+       "        ✅ Test case passed\n",
+       "\n",
+       "    bayes_filter - 2 result:\n",
+       "        ✅ Test case passed\n",
+       "\n",
+       "    bayes_filter - 3 result:\n",
+       "        ❌ Test case failed\n",
+       "        Trying:\n",
+       "            assert test_bayes_move_update(b_print=False)\n",
+       "        Expecting nothing\n",
+       "        **********************************************************************\n",
+       "        Line 1, in bayes_filter 2\n",
+       "        Failed example:\n",
+       "            assert test_bayes_move_update(b_print=False)\n",
+       "        Expected nothing\n",
+       "        Got:\n",
+       "            Warning: Sensor reading is different than check False versus True\n",
+       "            Warning: Sensor reading is different than check False versus True\n",
+       "            Warning: Sensor reading is different than check True versus False\n",
+       "            Warning: Sensor reading is different than check True versus False\n",
+       "            Warning: Sensor reading is different than check True versus False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"bayes_filter\")"
    ]
@@ -498,31 +557,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.620350774814415\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "import numpy as np\n",
     "# List of names (creates a set)\n",
-    "worked_with_names = {\"not filled out\"}\n",
+    "worked_with_names = {\"none\"}\n",
     "# List of URLS W26 (creates a set)\n",
-    "websites = {\"not filled out\"}\n",
+    "websites = {\"gemini3pro(to catch the syntax error: if if else)\"}\n",
     "# Approximate number of hours, including lab/in-class time\n",
-    "hours = -1.5"
+    "hours = 8.75 + np.random.uniform()*6\n",
+    "print(hours)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🌟</p>"
+      ],
+      "text/plain": [
+       "hours_collaborators results: All test cases passed!"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"hours_collaborators\")"
    ]
