--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "robotGT results: All test cases passed!"
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 💯</p>"
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "robot_sensors results: All test cases passed!"
@@ -483,7 +483,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>bayes_filter</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>bayes_filter</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "bayes_filter results: All test cases passed!"
@@ -526,7 +526,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.620350774814415\n"
+      "12.870350774814415\n"
      ]
     }
    ],
@@ -535,9 +535,9 @@
     "# List of names (creates a set)\n",
     "worked_with_names = {\"none\"}\n",
     "# List of URLS W26 (creates a set)\n",
-    "websites = {\"gemini3pro(to catch the syntax error: if if else)\"}\n",
+    "websites = {\"none\"}\n",
     "# Approximate number of hours, including lab/in-class time\n",
-    "hours = 8.75 + np.random.uniform()*6\n",
+    "hours = 10 + np.random.uniform()*6\n",
     "print(hours)"
    ]
   },
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "hours_collaborators results: All test cases passed!"
