--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "hours_collaborators results: All test cases passed!"
