constructed as 1d kalman filter but still not working

--- a/RobotHallway/check_kalman_filter.ipynb
+++ b/RobotHallway/check_kalman_filter.ipynb
@@ -141,7 +141,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "robotGT results: All test cases passed!"
@@ -252,7 +252,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "robot_sensors results: All test cases passed!"
@@ -283,54 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[17 39]\n",
-      " [23 53]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "x = np.array([[1,2],\n",
-    "              [3,4]])\n",
-    "\n",
-    "C = np.array([[5,6],\n",
-    "              [7,8]])\n",
-    "\n",
-    "print(C @ x.transpose())  # Matrix multiplication"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.113859056903\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.array([1,0])\n",
-    "C = np.array([1,0])\n",
-    "err = np.random.normal(0, 0.1, size=None)\n",
-    "print(C @ x.T + err)\n",
-    "print(C @ x.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -343,13 +296,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robot location 0.5\n",
+      "Distance reading from sensor: 0.4810928333564287\n",
+      "New robot location after move 0.37919009924349256\n",
+      "Location Gaussian is: 0.38220501962958, sigma is 0.10914103126634987\n"
+     ]
+    }
+   ],
    "source": [
     "# Syntax checks\n",
     "kalman_filter = KalmanFilter()\n",
@@ -365,28 +329,49 @@
     "print(f\"Robot location {robot_ground_truth.robot_loc}\")\n",
     "# Actually get out a distance reading from the robot sensor. Should return 0.5 +- some noise\n",
     "dist_reading = robot_sensor.query_distance_to_wall(robot_gt=robot_ground_truth)\n",
+    "print(f\"Distance reading from sensor: {dist_reading}\")\n",
     "# Actually move the robot\n",
     "robot_ground_truth.move_continuous(amount=-0.1)\n",
     "# Should be 0.4 +- some noise\n",
     "print(f\"New robot location after move {robot_ground_truth.robot_loc}\")\n",
     "\n",
     "# The two kalman filter update methods. You can put in whatever values you want to test\n",
-    "kalman_filter.update_belief_distance_sensor(robot_sensor, dist_reading=0.1)\n",
-    "kalman_filter.update_continuous_move(robot_ground_truth, amount=0.0)\n",
+    "kalman_filter.update_belief_distance_sensor(robot_sensor, dist_reading=dist_reading)\n",
+    "kalman_filter.update_continuous_move(robot_ground_truth, amount=-0.1)\n",
     "\n",
     "# Example print statement \n",
-    "print(f\"Location Gaussian is: {kalman_filter.location_mean()}, sigma is {kalman_filter.location_sigma}\")"
+    "print(f\"Location Gaussian is: {kalman_filter.location_mean()}, sigma is {kalman_filter.location_sigma()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "otter_answer_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Kalman\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Failed sequence ['Sensor'], got mu 0.668341503381677, expected 0.6430902778744254",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# GUIDE If this is failing, debug each step (Ax + Bu + noise) and (x = Cz) in turn by putting values in the calls in the previous cell\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmake_tests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m test_kalman_update\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mtest_kalman_update\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/maker/Prog/VScodium/ROB456/RobotHallway/make_tests.py:154\u001b[39m, in \u001b[36mtest_kalman_update\u001b[39m\u001b[34m(b_print)\u001b[39m\n\u001b[32m    151\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mShould be one of Move, Sensor, or Both, got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    153\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(seq[\u001b[33m\"\u001b[39m\u001b[33mmu\u001b[39m\u001b[33m\"\u001b[39m], kalman_filter.location_mean(), atol=\u001b[32m0.01\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m154\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFailed sequence \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseq[\u001b[33m'\u001b[39m\u001b[33mseq\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, got mu \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkalman_filter.location_mean()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, expected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseq[\u001b[33m'\u001b[39m\u001b[33mmu\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    155\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np.isclose(seq[\u001b[33m\"\u001b[39m\u001b[33msigma\u001b[39m\u001b[33m\"\u001b[39m], kalman_filter.location_sigma(), atol=\u001b[32m0.01\u001b[39m):\n\u001b[32m    156\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFailed sequence \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseq[\u001b[33m'\u001b[39m\u001b[33mseq\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, got sigma \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkalman_filter.location_sigma()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, expected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseq[\u001b[33m'\u001b[39m\u001b[33msigma\u001b[39m\u001b[33m'\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mValueError\u001b[39m: Failed sequence ['Sensor'], got mu 0.668341503381677, expected 0.6430902778744254"
+     ]
+    }
+   ],
    "source": [
     "# GUIDE If this is failing, debug each step (Ax + Bu + noise) and (x = Cz) in turn by putting values in the calls in the previous cell\n",
     "from make_tests import test_kalman_update\n",
@@ -400,7 +385,64 @@
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong style='color: red;'><pre style='display: inline;'>kalman_filter</pre> results:</strong></p><p><strong><pre style='display: inline;'>kalman_filter - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
+       "    Trying:\n",
+       "        assert test_kalman_update(b_print=False)\n",
+       "    Expecting nothing\n",
+       "    **********************************************************************\n",
+       "    Line 1, in kalman_filter 0\n",
+       "    Failed example:\n",
+       "        assert test_kalman_update(b_print=False)\n",
+       "    Exception raised:\n",
+       "        Traceback (most recent call last):\n",
+       "          File \"/opt/homebrew/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/lib/python3.13/doctest.py\", line 1398, in __run\n",
+       "            exec(compile(example.source, filename, \"single\",\n",
+       "            ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+       "                         compileflags, True), test.globs)\n",
+       "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+       "          File \"<doctest kalman_filter 0[0]>\", line 1, in <module>\n",
+       "            assert test_kalman_update(b_print=False)\n",
+       "                   ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^\n",
+       "          File \"/Users/elliotzimmer/Documents/maker/Prog/VScodium/ROB456/RobotHallway/make_tests.py\", line 154, in test_kalman_update\n",
+       "            raise ValueError(f\"Failed sequence {seq['seq']}, got mu {kalman_filter.location_mean()}, expected {seq['mu']}\")\n",
+       "        ValueError: Failed sequence ['Sensor'], got mu 0.5430902778744254, expected 0.6430902778744254\n",
+       "</pre>"
+      ],
+      "text/plain": [
+       "kalman_filter results:\n",
+       "    kalman_filter - 1 result:\n",
+       "        ❌ Test case failed\n",
+       "        Trying:\n",
+       "            assert test_kalman_update(b_print=False)\n",
+       "        Expecting nothing\n",
+       "        **********************************************************************\n",
+       "        Line 1, in kalman_filter 0\n",
+       "        Failed example:\n",
+       "            assert test_kalman_update(b_print=False)\n",
+       "        Exception raised:\n",
+       "            Traceback (most recent call last):\n",
+       "              File \"/opt/homebrew/Cellar/python@3.13/3.13.7/Frameworks/Python.framework/Versions/3.13/lib/python3.13/doctest.py\", line 1398, in __run\n",
+       "                exec(compile(example.source, filename, \"single\",\n",
+       "                ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+       "                             compileflags, True), test.globs)\n",
+       "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+       "              File \"<doctest kalman_filter 0[0]>\", line 1, in <module>\n",
+       "                assert test_kalman_update(b_print=False)\n",
+       "                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^\n",
+       "              File \"/Users/elliotzimmer/Documents/maker/Prog/VScodium/ROB456/RobotHallway/make_tests.py\", line 154, in test_kalman_update\n",
+       "                raise ValueError(f\"Failed sequence {seq['seq']}, got mu {kalman_filter.location_mean()}, expected {seq['mu']}\")\n",
+       "            ValueError: Failed sequence ['Sensor'], got mu 0.5430902778744254, expected 0.6430902778744254"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"kalman_filter\")"
    ]
